# jigs

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile  release-plz.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release-plz.yml
crates/jigs/: Cargo.toml
crates/jigs-core/: CHANGELOG.md  Cargo.toml
crates/jigs-core/src/: json.rs  lib.rs  meta.rs  tests.rs  trace.rs
crates/jigs-log/: CHANGELOG.md  Cargo.toml
crates/jigs-log/src/: json.rs  lib.rs  tree.rs
crates/jigs-macros/: Cargo.toml
crates/jigs-macros/src/: lib.rs
crates/jigs-map/: CHANGELOG.md  Cargo.toml
crates/jigs-map/src/: html.rs  index.rs  lib.rs  mermaid.rs  template.html
crates/jigs-trace/: CHANGELOG.md  Cargo.toml
crates/jigs-trace/src/: lib.rs
crates/jigs/src/: lib.rs
crates/jigs/tests/: dedup_by_identity.rs  inventory.rs
docs/: index.html
docs/async/: index.html
docs/cf-rag/: index.html
docs/checkout/: index.html
docs/events/: index.html
docs/hello/: index.html
docs/http/: index.html
docs/todo-api/: index.html
docs/typeflow/: index.html
examples/async/: Cargo.toml  map.html  map.md
examples/async/src/: main.rs
examples/cf-rag/: Cargo.toml  README.md  map.md
examples/cf-rag/src/: bindings.rs  main.rs  pipeline.rs  types.rs
examples/cf-rag/src/features/: agent.rs  guard.rs  ingest.rs  mod.rs  output.rs  retrieve.rs
examples/checkout/: Cargo.toml  map.html  map.md
examples/checkout/src/: main.rs  pipeline.rs  store.rs  types.rs
examples/checkout/src/features/: fulfillment.rs  ingest.rs  mod.rs  pricing.rs  validation.rs
examples/events/: Cargo.toml  map.md
examples/events/src/: main.rs  pipeline.rs  types.rs
examples/events/src/features/: inventory.rs  mod.rs  notifications.rs  orders.rs
examples/hello/: Cargo.toml  map.html  map.md
examples/hello/src/: main.rs
examples/http/: Cargo.toml  map.html  map.md
examples/http/src/: http.rs  main.rs
examples/todo-api/: Cargo.toml  map.md
examples/todo-api/src/: http.rs  main.rs  pipeline.rs  store.rs  types.rs
examples/todo-api/src/features/: auth.rs  labels.rs  mod.rs  todos.rs
examples/typeflow/: Cargo.toml  map.md
examples/typeflow/src/: main.rs  pipeline.rs  types.rs
examples/typeflow/src/features/: auth.rs  compute.rs
