[package]
name = "jigs-log"
description = "Renderers for jigs trace entries (tree view and structured JSON)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/jigs-log"

[dependencies]
jigs-trace.workspace = true
