[package]
name = "jigs-map"
description = "HTML map generator for jigs pipelines"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/jigs-map"

[dependencies]
jigs-core = { workspace = true }
