[package]
name = "jigs-trace"
description = "Per-jig execution tracing for the jigs framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/jigs-trace"

[dependencies]
jigs-core.workspace = true
