[package]
name = "jigs"
description = "A small Rust framework for explicit, composable, traceable processing pipelines"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/jigs"

[features]
default = []
trace = ["dep:jigs-trace", "dep:jigs-log", "jigs-macros/trace"]

[dependencies]
jigs-core.workspace = true
jigs-macros.workspace = true
jigs-trace = { workspace = true, optional = true }
jigs-log = { workspace = true, optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
